--- a/public/info.html
+++ b/public/info.html
@@ -1,15 +1,15 @@
-<%let compamy_logo_zh = setting.find(n=> n.key == 'compamy_logo' && n.lang == 'zh')
-let compamy_name_zh = setting.find(n=>n.key == 'compamy_name' && n.lang == 'zh')
-let slogan_zh = setting.find(n=>n.key == 'slogan' && n.lang == 'zh')
-let phone_zh = setting.find(n=>n.key == 'phone' && n.lang == 'zh')
-let email_zh = setting.find(n=>n.key == 'email' && n.lang == 'zh')
-let address_zh = setting.find(n=>n.key == 'address' && n.lang == 'zh')
-let compamy_logo_en = setting.find(n=>n.key == 'compamy_logo' && n.lang == 'en')
-let compamy_name_en = setting.find(n=>n.key == 'compamy_name' && n.lang == 'en')
-let slogan_en = setting.find(n=>n.key == 'slogan' && n.lang == 'en')
-let phone_en = setting.find(n=>n.key == 'phone' && n.lang == 'en')
-let email_en = setting.find(n=>n.key == 'email' && n.lang == 'en')
-let address_en = setting.find(n=>n.key == 'address' && n.lang == 'en')%>
+<%var compamy_logo_zh = setting.find(n=> n.key == 'compamy_logo' && n.lang == 'zh')
+var compamy_name_zh = setting.find(n=>n.key == 'compamy_name' && n.lang == 'zh')
+var slogan_zh = setting.find(n=>n.key == 'slogan' && n.lang == 'zh')
+var phone_zh = setting.find(n=>n.key == 'phone' && n.lang == 'zh')
+var email_zh = setting.find(n=>n.key == 'email' && n.lang == 'zh')
+var address_zh = setting.find(n=>n.key == 'address' && n.lang == 'zh')
+var compamy_logo_en = setting.find(n=>n.key == 'compamy_logo' && n.lang == 'en')
+var compamy_name_en = setting.find(n=>n.key == 'compamy_name' && n.lang == 'en')
+var slogan_en = setting.find(n=>n.key == 'slogan' && n.lang == 'en')
+var phone_en = setting.find(n=>n.key == 'phone' && n.lang == 'en')
+var email_en = setting.find(n=>n.key == 'email' && n.lang == 'en')
+var address_en = setting.find(n=>n.key == 'address' && n.lang == 'en')%>
 
 	<div class="panel panel-default">
 		<div class="panel-body">
