--- a/public/news_insert.html
+++ b/public/news_insert.html
@@ -175,7 +175,7 @@
 
 					<%
                 		var en_news = {};
-                		if(en_news.article) {
+                		if(news.article) {
                 			en_news = news.article.find(article => article.language == "en");
                 		}
                 	%>
