--- a/public/news_insert.html
+++ b/public/news_insert.html
@@ -279,7 +279,17 @@
 
 	<script>
 		var imgurl;
-		tinymce.init({ selector:'.textarea' });
+		tinymce.init({
+			selector:'.textarea',
+
+			theme: 'modern',
+			plugins: [
+      'advlist autolink link image lists charmap print preview hr anchor pagebreak spellchecker',
+      'searchreplace wordcount visualblocks visualchars code fullscreen insertdatetime media nonbreaking',
+      'save table contextmenu directionality emoticons template paste textcolor'
+    ],
+			toolbar: 'formatselect | bold italic strikethrough | alignleft aligncenter alignright alignjustify  | numlist bullist outdent indent | link image | print preview media fullpage | forecolor backcolor emoticons'
+		});
 		$("#imgurl.dropzone").dropzone({
 			success: function(status, data) {
 			    imgurl = data.msg;
