--- a/public/company_editor.html
+++ b/public/company_editor.html
@@ -67,7 +67,7 @@
 								  	<div id="dropzone">
 										<form action="/upload" id="imgurl" class="dropzone">
 											<div class="fallback">
-												<input id="imgurl" name="upload" type="file" multiple="" />
+												<input name="upload" type="file" multiple="" />
 											</div>
 										</form>
 									</div>
@@ -94,7 +94,7 @@
 								  	<div id="dropzone">
 										<form action="/upload" id="banner" class="dropzone">
 											<div class="fallback">
-												<input id="banner" name="upload" type="file" multiple="" />
+												<input name="upload" type="file" multiple="" />
 											</div>
 										</form>
 									</div>
