--- a/public/news_insert.html
+++ b/public/news_insert.html
@@ -112,7 +112,7 @@
 								  	<div id="dropzone">
 										<form action="/upload" id="imgurl" class="dropzone">
 											<div class="fallback">
-												<input id="imgurl" name="upload" type="file" multiple="" />
+												<input name="upload" type="file" multiple="" />
 											</div>
 										</form>
 									</div>
@@ -283,15 +283,16 @@
 			selector:'.textarea',
 			theme: 'modern',
 			plugins: [
-      'advlist autolink link image lists charmap print preview hr anchor pagebreak spellchecker',
-      'searchreplace wordcount visualblocks visualchars code fullscreen insertdatetime media nonbreaking',
-      'save table contextmenu directionality emoticons template paste textcolor'
-    ],
+				'advlist autolink link image lists charmap print preview hr anchor pagebreak spellchecker',
+				'searchreplace wordcount visualblocks visualchars code fullscreen insertdatetime media nonbreaking',
+				'save table contextmenu directionality emoticons template paste textcolor'
+			],
 			toolbar: 'formatselect | bold italic strikethrough | alignleft aligncenter alignright alignjustify  | numlist bullist outdent indent | link image | print preview media fullpage | forecolor backcolor emoticons'
 		});
 		$("#imgurl.dropzone").dropzone({
 			success: function(status, data) {
 			    imgurl = data.msg;
+			    console.log('data', data)
 			}
 		});
 		function submit(){
