--- a/public/menu.html
+++ b/public/menu.html
@@ -10,6 +10,7 @@
 			<ul class="nav nav-sidebar">
 				<li><a href="/"><i class="fa fa-laptop"></i><span class="text">首页</span></a></li>
 				<li><a href="/news"><i class="fa fa-list-alt"></i><span class="text">新闻管理</span></a></li>
+				<li><a href="/bullet/list"><i class="fa fa-file-text"></i><span class="text">特价管理</span></a></li>
 				<li><a href="/company?pid=0"><i class="fa fa-file-text"></i><span class="text">关于我们</span></a></li>
 				<li><a href="/company?pid=1"><i class="fa fa-file-text"></i><span class="text">业务范围</span></a></li>
 				<li><a href="/company?pid=2"><i class="fa fa-file-text"></i><span class="text">联系我们</span></a></li>
