--- a/public/news_insert.html
+++ b/public/news_insert.html
@@ -284,7 +284,8 @@
 				'searchreplace wordcount visualblocks visualchars code fullscreen insertdatetime media nonbreaking',
 				'save table contextmenu directionality emoticons template paste textcolor'
 			],
-			toolbar: 'formatselect | bold italic strikethrough | alignleft aligncenter alignright alignjustify  | numlist bullist outdent indent | link image | print preview media fullpage | forecolor backcolor emoticons'
+			toolbar: 'formatselect | bold italic strikethrough | alignleft aligncenter alignright alignjustify  | numlist bullist outdent indent | link image | print preview media fullpage | forecolor backcolor emoticons',
+			image_prepend_url: "http://admin.skyfortune.sh.cn/"
 		});
 		$("#imgurl.dropzone").dropzone({
 			success: function(status, data) {
